Add video pause control

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">HoloManual - Printer</h2>
                   <p class="item-intro text-muted">3D manual guide to troubleshoot office printer</p>
-                  <video class="img-fluid d-block mx-auto" controls>
+                  <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
                     <source src="vid/HoloManualPrinter.mp4" type="video/mp4">
                   </video> <br>
                   <p>This is a 3D manual guide to help refill an office printer using HoloLens. Steps are shown visually directly on the corresponding parts on the printer itself.</p>
@@ -345,7 +345,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">HoloManual - Box</h2>
                   <p class="item-intro text-muted">3D manual guide to cleanly repack a package box</p>
-                  <video class="img-fluid d-block mx-auto" controls>
+                  <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
                     <source src="vid/HoloManualBox.mp4" type="video/mp4">
                   </video> <br>
                   <p>This is a 3D manual guide to help repack a box. The steps are shown visual so that the user can easily determine where each components are stored inside the box.</p>
@@ -380,7 +380,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">HoloCognitive</h2>
                   <p class="item-intro text-muted">Determine a person's emotion with HoloLens and Azure Emotion API</p>
-                  <video class="img-fluid d-block mx-auto" controls>
+                  <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
                     <source src="vid/HoloCognitive.mp4" type="video/mp4">
                   </video> <br>
                   <p>This application determines the emotion of people around using Azure Emotion API. A person's face is scanned using HoloLenses camera and analyzed in the cloud. Output is shown via emoji overlay directly on top of the person's face.</p>
@@ -415,7 +415,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">HoloChatting</h2>
                   <p class="item-intro text-muted">Chatting application with HoloLens</p>
-                  <video class="img-fluid d-block mx-auto" controls>
+                  <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
                     <source src="vid/HoloChatting.mp4" type="video/mp4">
                   </video> <br>
                   <p>This is a chatting application for HoloLens and PC. Communication is done using websocket. On the HoloLens side, user can directly talk to the microphone and the application can directly recognize and translate them to text. Supports Japanese language.</p>
@@ -450,7 +450,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">HoloFactory</h2>
                   <p class="item-intro text-muted">Enhance factory business process with real-time factory information</p>
-                  <video class="img-fluid d-block mx-auto" controls>
+                  <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
                     <source src="vid/HoloFactory.mp4" type="video/mp4">
                   </video> <br>
                   <p>This application is used in a factory (miniature for now) to show real time condition of the factory at any time. Worker's condition, current job, machine's condition and health, etc.</p>
@@ -485,7 +485,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">ViveFireTraining</h2>
                   <p class="item-intro text-muted">Fire evacuation training using HTC Vive</p>
-                  <video class="img-fluid d-block mx-auto" controls>
+                  <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
                     <source src="vid/ViveFireTraining.mp4" type="video/mp4">
                   </video> <br>
                   <p>This is a Fire evacuation training application prototype using HTC Vive. Features include real office model and fire extinguisher's particle system.</p>
