--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Portfolio</h2>
-            <h3 class="section-subheading text-muted"></h3>
+            <h3 class="section-subheading text-muted">My work mostly consisted of HoloLens application/protoype developed using Unity 3D.</h3>
           </div>
         </div>
         <div class="row">
