Added HoloFairy and HoloTWX/HoloMonitoring

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Akbar Syam's Portfolio Website</title>
+    <title>Akbar Syam (アクバル シャム)</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,6 +56,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-heading text-uppercase">Akbar Syam</div>
+          <div class="intro-lead-in">（アクバル シャム）</div>
           <div class="intro-lead-in">Senior HoloLens Engineer・Unity Developer</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">Check out my work</a>
         </div>
@@ -68,10 +69,38 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Portfolio</h2>
-            <h3 class="section-subheading text-muted">My work mostly consisted of HoloLens application/protoype developed using Unity 3D.</h3>
+            <h3 class="section-subheading text-muted">My work mostly consisted of HoloLens application developed using Unity 3D.</h3>
           </div>
         </div>
         <div class="row">
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/08-HoloMonitoring.PNG" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>HoloMonitoring</h4>
+              <p class="text-muted">IoT Integration between HoloLens and a working factory using Thingworx</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/07-HoloFairy.PNG" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>HoloFairy</h4>
+              <p class="text-muted">Playing around with fairies in real space.</p>
+            </div>
+          </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
               <div class="portfolio-hover">
@@ -174,38 +203,21 @@
             <ul class="timeline">
               <li>
                 <div class="timeline-image">
-                  <a href="https://www.itb.ac.id/" target="_blank">
-                    <img class="rounded-circle img-fluid" src="img/about/4.png" alt="">
+                  <a href="https://www.isid.co.jp/english/" target="_blank">
+                    <img class="rounded-circle img-fluid" src="img/about/1.png" alt="">
                   </a>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Graduated 2015</h4>
-                    <h4 class="subheading">Bandung Institute of Technology (ITB)</h4>
+                    <h4>2016 - 2019</h4>
+                    <h4 class="subheading">Information Services International Dentsu (ISID)</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">• Thesis: Indonesian Speaker Identification System with Gaussian Mixture Model<br>
-                      • Head of 2013 April Graduation Commitee<br>
-                      • Head of Internal Division in HMIF
-                      </p>
+                    <p class="text-muted">Located in Tokyo, Japan. Lead Programmer in HoloLens application development team. Broadly proficient and experienced in Unity. Specialized in XR, explored platform including: HTC Vive, Oculus Rift, Gear VR, Google Daydream, Lenovo Mirage Solo, Meta 2, Magic Leap.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/3.png" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>June - August 2014</h4>
-                    <h4 class="subheading">Telkom Indonesia (Intern)</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Data analytics and modeling for Hi-Indonesia Project </p>
-                  </div>
-                </div>
-              </li>
-              <li>
                 <div class="timeline-image">
                   <a href="https://www.slogan.jp/en/" target="_blank">
                     <img class="rounded-circle img-fluid" src="img/about/2.png" alt="">
@@ -221,19 +233,37 @@
                   </div>
                 </div>
               </li>
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/about/3.png" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>June - August 2014</h4>
+                    <h4 class="subheading">Telkom Indonesia (Intern)</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Data analytics and modeling for Hi-Indonesia Project </p>
+                  </div>
+                </div>
+              </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <a href="https://www.isid.co.jp/english/" target="_blank">
-                    <img class="rounded-circle img-fluid" src="img/about/1.png" alt="">
+                  <a href="https://www.itb.ac.id/" target="_blank">
+                    <img class="rounded-circle img-fluid" src="img/about/4.png" alt="">
                   </a>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>2016 - 2019</h4>
-                    <h4 class="subheading">Information Services International Dentsu (ISID)</h4>
+                    <h4>Graduation class 2015</h4>
+                    <h4 class="subheading">Bandung Institute of Technology (ITB)</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Located in Tokyo, Japan. Lead Programmer in HoloLens application development team. Broadly proficient and experienced in Unity. Specialized in XR, explored platform including: HTC Vive, Oculus Rift, Gear VR, Google Daydream, Lenovo Mirage Solo, Meta 2, Magic Leap.</p>
+					<p class="text-muted">• Bachelor of Computer Science<br>
+					  • Thesis: Indonesian Speaker Identification System with Gaussian Mixture Model<br>
+                      • Head of 2013 April Graduation Commitee<br>
+                      • Head of Internal Division in HMIF
+                      </p>
                   </div>
                 </div>
               </li>
@@ -492,6 +522,76 @@
                   <ul class="list-inline">
                     <li>Date: November 2016</li>
                     <li>Category: HTC Vive</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fas fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 7 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">HoloFairy</h2>
+                  <p class="item-intro text-muted">Playing around with fairies in real space</p>
+                  <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
+                    <source src="vid/HoloFairy.mp4" type="video/mp4">
+                  </video> <br>
+                  <p>Play around with fairies on real space. Fairies can be touched with your own hand. You can also interact with the fairies just by approaching them and giving them apples.</p>
+                  <ul class="list-inline">
+                    <li>Date: March 2019</li>
+                    <li>Category: HoloLens</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fas fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 8 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">HoloMonitoring</h2>
+                  <p class="item-intro text-muted">IoT Integration between HoloLens and a working factory using Thingworx</p>
+                  <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
+                    <source src="vid/HoloMonitoring.mp4" type="video/mp4">
+                  </video> <br>
+                  <p>View and analyze real time data provided from a real working factory. Data is provided using an IoT platform called Thingworx. Monitoring and maintenance worker can also view dashboard menu to help them in doing their work.</p>
+                  <ul class="list-inline">
+                    <li>Date: May 2019</li>
+                    <li>Category: HoloLens, Vuforia, HoloLens 2</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fas fa-times"></i>
