--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/08-HoloMonitoring.PNG" alt="">
+              <img class="img-fluid" src="img/portfolio/08-HoloMonitoring.png" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>HoloMonitoring</h4>
@@ -94,7 +94,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/07-HoloFairy.PNG" alt="">
+              <img class="img-fluid" src="img/portfolio/07-HoloFairy.png" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>HoloFairy</h4>
