--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="intro-text">
           <div class="intro-heading text-uppercase">Akbar Syam</div>
           <div class="intro-lead-in">（アクバル シャム）</div>
-          <div class="intro-lead-in">Senior HoloLens Engineer・Unity Developer</div>
+          <div class="intro-lead-in">AR/VR・Unity Engineer</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">Check out my work</a>
         </div>
       </div>
@@ -68,7 +68,44 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Portfolio</h2>
+            <h2 class="section-heading text-uppercase">Games</h2>
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#gamesModal2">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/games/bloodsister.png" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Blood Sister</h4>
+              <p class="text-muted">Auto battler RPG game with proc-based skills</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#gamesModal1">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/games/AAT.png" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>AcchooAimTrainer</h4>
+              <p class="text-muted">FPS Sandbox game for aim training.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">AR/VR</h2>
             <h3 class="section-subheading text-muted">My work mostly consisted of HoloLens application developed using Unity 3D.</h3>
           </div>
         </div>
@@ -286,7 +323,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/akbar.jpg" alt="">
               <h4>Akbar Syam</h4>
-              <p class="text-muted">Senior HoloLens Engineer・Unity Developer</p>
+              <p class="text-muted">AR/VR・Unity Engineer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/akbarsyam" target="_blank">
@@ -294,8 +331,8 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="https://www.facebook.com/akbar.syam" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
+                  <a href="https://github.com/akbarssyam" target="_blank">
+                    <i class="fab fa-github"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
@@ -592,6 +629,76 @@
                   <ul class="list-inline">
                     <li>Date: May 2019</li>
                     <li>Category: HoloLens, Vuforia, HoloLens 2</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fas fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Games Modal 1 -->
+    <div class="portfolio-modal modal fade" id="gamesModal1" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">AcchooAimTrainer</h2>
+                  <p class="item-intro text-muted">FPS Sandbox game for aim training.</p>
+                  <p><a href="https://github.com/akbarssyam/AcchooAimTrainer">Github</a></p>
+                  <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
+                    <source src="vid/games/AAT.mp4" type="video/mp4">
+                  </video> <br>
+                  <ul class="list-inline">
+                    <li>Date: August 2019</li>
+                    <li>Category: Unity, FPS</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fas fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Games Modal 2 -->
+    <div class="portfolio-modal modal fade" id="gamesModal2" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Blood Sister</h2>
+                  <p class="item-intro text-muted">Auto battler RPG game with proc-based skills</p>
+                  <p><a href="https://github.com/akbarssyam/AutoRPG">Github</a></p>
+                  <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
+                    <source src="vid/games/AAT.mp4" type="video/mp4">
+                  </video> <br>
+                  <ul class="list-inline">
+                    <li>Date: May 2020</li>
+                    <li>Category: Unity, RPG, AutoBattler</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fas fa-times"></i>
