--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                   <p class="item-intro text-muted">Auto battler RPG game with proc-based skills</p>
                   <p><a href="https://github.com/akbarssyam/AutoRPG">Github</a></p>
                   <video class="img-fluid d-block mx-auto" controls onclick="this.paused? this.play() : this.pause()">
-                    <source src="vid/games/AAT.mp4" type="video/mp4">
+                    <source src="vid/games/bloodsister.mp4" type="video/mp4">
                   </video> <br>
                   <ul class="list-inline">
                     <li>Date: May 2020</li>
