--- a/index.html
+++ b/index.html
@@ -327,22 +327,22 @@
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/akbarsyam" target="_blank">
-                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-twitter" alt="Twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
                   <a href="https://github.com/akbarssyam" target="_blank">
-                    <i class="fab fa-github"></i>
+                    <i class="fab fa-github" alt="Github"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
                   <a href="https://www.linkedin.com/in/akbar-syam-a2277490/" target="_blank">
-                    <i class="fab fa-linkedin-in"></i>
+                    <i class="fab fa-linkedin-in" alt="LinkedIn"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
                   <a href="mailto:akbarssyam@gmail.com" target="_blank">
-                    <i class="far fa-envelope"></i>
+                    <i class="far fa-envelope" alt="Email"></i>
                   </a>
                 </li>
               </ul>
